{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 15,
  "lineage": "471522aa-1a8e-62f6-8421-afae8074ed17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:899535647565:instance/i-0c1280c5e192c485a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1280c5e192c485a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02116720498318f19"
              }
            ],
            "primary_network_interface_id": "eni-02116720498318f19",
            "private_dns": "ip-10-0-1-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.187",
            "public_ip": "3.235.4.251",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7142c60492ed80a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ab5b9fd2645f53e",
            "tags": {
              "Name": "aws-ecommerce-terraform-ec2",
              "Project": "aws-ecommerce-terraform"
            },
            "tags_all": {
              "Name": "aws-ecommerce-terraform-ec2",
              "Project": "aws-ecommerce-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b57eb82d66be6920"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "i-0c1280c5e192c485a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899535647565:internet-gateway/igw-0d8689e18ad8502ed",
            "id": "igw-0d8689e18ad8502ed",
            "owner_id": "899535647565",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-ecommerce-terraform-igw",
              "Project": "aws-ecommerce-terraform"
            },
            "tags_all": {
              "Name": "aws-ecommerce-terraform-igw",
              "Project": "aws-ecommerce-terraform"
            },
            "vpc_id": "vpc-020de0525f164183f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "igw-0d8689e18ad8502ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899535647565:route-table/rtb-06feb680cb5b0cd7b",
            "id": "rtb-06feb680cb5b0cd7b",
            "owner_id": "899535647565",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8689e18ad8502ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-ecommerce-terraform-public-rt",
              "Project": "aws-ecommerce-terraform"
            },
            "tags_all": {
              "Name": "aws-ecommerce-terraform-public-rt",
              "Project": "aws-ecommerce-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-020de0525f164183f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "rtb-06feb680cb5b0cd7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0251c1e8da5424dbd",
            "region": "us-east-1",
            "route_table_id": "rtb-06feb680cb5b0cd7b",
            "subnet_id": "subnet-03ab5b9fd2645f53e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "rtbassoc-0251c1e8da5424dbd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899535647565:security-group/sg-0b57eb82d66be6920",
            "description": "Security Group da EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b57eb82d66be6920",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-ecommerce-terraform-ec2-sg",
            "name_prefix": "",
            "owner_id": "899535647565",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-ecommerce-terraform-ec2-sg",
              "Project": "aws-ecommerce-terraform"
            },
            "tags_all": {
              "Name": "aws-ecommerce-terraform-ec2-sg",
              "Project": "aws-ecommerce-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-020de0525f164183f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "sg-0b57eb82d66be6920",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899535647565:subnet/subnet-03ab5b9fd2645f53e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab5b9fd2645f53e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899535647565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-ecommerce-terraform-public-subnet",
              "Project": "aws-ecommerce-terraform"
            },
            "tags_all": {
              "Name": "aws-ecommerce-terraform-public-subnet",
              "Project": "aws-ecommerce-terraform"
            },
            "vpc_id": "vpc-020de0525f164183f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "subnet-03ab5b9fd2645f53e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899535647565:vpc/vpc-020de0525f164183f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0510223f9c28ad7",
            "default_route_table_id": "rtb-00f77e5d3d6999287",
            "default_security_group_id": "sg-0fe4578fa7e9557be",
            "dhcp_options_id": "dopt-00b1e2b79ddf2bacd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020de0525f164183f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f77e5d3d6999287",
            "owner_id": "899535647565",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-ecommerce-terraform-vpc",
              "Project": "aws-ecommerce-terraform"
            },
            "tags_all": {
              "Name": "aws-ecommerce-terraform-vpc",
              "Project": "aws-ecommerce-terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "899535647565",
            "id": "vpc-020de0525f164183f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}